feat(测试计划): 批量移动和复制功能开发