@@ -23,6 +23,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -113,7 +114,7 @@ public class TestPlanManagementService {
     }
 
     public List<TestPlanResponse> selectByGroupId(String groupId) {
-        return extTestPlanMapper.selectByGroupIds(List.of(groupId));
+        return extTestPlanMapper.selectByGroupIds(Collections.singletonList(groupId));
     }
 
 
